@@ -21,8 +21,9 @@ $job_cond{'usage_start'} = '1270000000';
 $job_cond{'usage_end'}   = '1273000000';
 my @grouping = qw( 50 250 500 1000 );
 my $flat_view = 0;
+my $acct_as_parent = 1;
 
-my $clusters = Slurmdb::report_job_sizes_grouped_by_top_account($db_conn, \%job_cond, \@grouping, $flat_view);
+my $clusters = Slurmdb::report_job_sizes_grouped_by_top_account($db_conn, \%job_cond, \@grouping, $flat_view, $acct_as_parent);
 
 for (my $i = 0; $i < @$clusters; $i++) {
     print "cluster   $clusters->[$i]{'cluster'}\n";
